--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,81 @@
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+# virtual machine crash logs
 hs_err_pid*
 replay_pid*
+
+### Maven ###
+target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+
+### Vaadin ###
+node_modules/
+frontend/generated/
+.npmrc
+vite.generated.ts
+*.generated.js
+.vite/
+webpack.generated.js
+vite.config.ts
+
+### STS/Eclipse ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+bin/
+
+### IntelliJ IDEA ###
+.idea/
+*.iws
+*.iml
+*.ipr
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+### VS Code ###
+.vscode/
+
+### OS specific ###
+.DS_Store
+Thumbs.db
+
+### Project specific ###
+storage/
+src/main/frontend/generated/
+*.launch
+.h2.server.properties
+application-local.properties
+application-local.yml
+
+### Logs ###
+logs/
+*.log.*
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
